# tjf801.github.io

./: .gitignore  about.html  contact.html  index.html  main.css  nav.html  nav.js  nav.ts  navstyle.css  server.py  splashes.txt  style.css
about/: index.html
contact/: index.html
games/: index.html
games/Ndle/: constants.js  index.html  style.css  wordle.js
games/laserfocus/: Board.js  Goal.js  Laser.js  Piece.js  README.md  index.html  minimax.js  sketch.js
games/minesweeper/: board.js  index.html  sketch.js
games/snake/: fruit.js  index.html  sketch.js  snake.js
games/tetris/: index.html  piece.js  sketch.js
projects/: index.html
projects/physics/: Cargo.toml  index.html  index.js  no_server.js  package.json  web.config  webpack.config.js
projects/physics/pkg/: package.json  rust_physics_wasm.d.ts  rust_physics_wasm.js  rust_physics_wasm_bg.js  rust_physics_wasm_bg.wasm  rust_physics_wasm_bg.wasm.d.ts
scripts/: comic-sans.js  hmmm.js  index.html  quizlet-hack.js  test.js
