[package]
name = "rust-physics-wasm"
version = "0.1.0"
authors = ["ur mom"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "=0.1.5"
js-sys = "0.3.19"
wasm-bindgen = "0.2.44"
dimensioned = "0.8.0"

[dependencies.web-sys]
version = "0.3.4"
features = [
	'CanvasRenderingContext2d',
	'console',
	'Document',
	'Element',
	'EventTarget',
	'HtmlCanvasElement',
	'MouseEvent',
	'WebGlBuffer',
	'WebGlProgram',
	'WebGlRenderingContext',
	'WebGlShader',
	'WebGlUniformLocation',
	'Window',
]
